# ai2go

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READINESS.md  Dockerfile-agent.txt  Dockerfile-gpt-oss.txt  Dockerfile-orchestrator.txt  Dockerfile.agent  Dockerfile.gpt-oss  Dockerfile.orchestrator  Makefile  README.md  deploy.txt  deployment_readiness_agent.py  deployment_report.json  docker-compose.yml  pyproject.toml  pyproject.txt  services_agent_src_worker.py  services_orchestrator_src_agent.py
.github/workflows/: deployment-readiness.yml
config/: gpt-oss-config.yaml  mcp-hub.yaml
docs/: knowledge_graph.md
orchestrator/: main.py  pyproject.toml
scripts/: demo.sh  deploy.sh  test_system.py
services/agent/src/: worker.py
services/orchestrator/src/: agent.py
