[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agent-system"
version = "1.0.0"
description = "Docker-optimized orchestrator with agent team for repository management"
authors = [
    {name = "AI Agent System", email = "contact@ai-agent-system.com"},
]
dependencies = [
    "fast-agent-mcp>=0.1.0",
    "cognee>=0.1.0",
    "playwright>=1.44.0",
    "google-cloud-speech>=2.26.0",
    "google-cloud-texttospeech>=2.16.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvloop>=0.19.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
mcp = [
    "a2a-mcp-server", 
    "computer-control-mcp", 
    "mcp-genmedia"
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
select = ["E", "F", "I", "N", "W"]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]